# gen-mandarin-anki-rs

./: .gitignore  Cargo.toml  example_config.yml  readme.md
src/: main.rs
