[package]
name = "gen-mandarin-anki-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
again = "0.1.2"
chinese_dictionary = "2.1.4"
config = { version = "0.13.3", features = ["yaml"] }
csv = "1.2.2"
futures = "0.3.28"
genanki-rs = "0.4.0"
itertools = "0.11.0"
log = "0.4.20"
pinyin-parser = "0.1.7"
pinyin_zhuyin = "0.2.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
simplelog = "0.12.1"
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
url-escape = "0.1.1"
rustyline = "13.0.0"
rand = "0.8.5"